--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <input type="checkbox" id="banana" name="fruit" value="banana"><br>
   <label for="apple">apple</label>
   <input type="checkbox" id="apple" name="fruit" value="apple"><br>
+    <input type="checkbox" id="pineapple" name="fruit" value="apple">
+
   </form>
 </body>
 </html>
