--- a/index.html
+++ b/index.html
@@ -34,8 +34,63 @@
   <input type="checkbox" id="apple" name="fruit" value="apple"><br>
   <label for="pineapple">pineapple</label>
     <input type="checkbox" id="pineapple" name="fruit" value="apple">
-     
+     <br><hr>
 
-  </form>
+   <form action="">
+<label for="banana">banana</label>
+<input type="checkbox" id="fruit" name="banana" value="banana"><br>
+<label for="papaya">papaya</label>
+<input type="checkbox" id="fruit" name="papaya" value="papaya">
+<label for=""></label><hr>
+<label for="male">male</label>
+<input type="radio" id="male" name="gender" value="male" ><br>
+<label for="female">female</label>
+<input type="radio" name="gender" id="female" value="female"><br>
+<label for="other">other</label>
+<input type="radio" value="other" name="gender" id="other">
+
+   </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   <hr>
+<p>here is your item select multiple option need you </p>
+
+<label for="tomato">tomato</label>
+<input type="checkbox" id="vegetable" name="tomato" value="tomato"><br>
+<label for="potato">potato</label>
+<input type="checkbox" id="vegetable" name="potato" value="potato"><br>
+<hr>
+<p>select you gender</p>
+<label for="male">male</label>
+<input type="radio" id="male" name="gender" value="male"><br>
+<label for="female">female</label>
+<input type="radio" id="female" name="gender" value="female"><br>
+<label for="other">other</label>
+<input type="radio" id="other" name="gender" value="other">
+
+
+
+
+
+   
 </body>
 </html>
